Add some packages, reorg org config

--- a/init.org
+++ b/init.org
@@ -57,6 +57,7 @@ Custom variables set by various emacs packages
     - [[#org-reading-list][Org reading list]]
     - [[#toc][Toc]]
     - [[#org-journal][Org journal]]
+    - [[#org-babel][Org babel]]
   - [[#magit][Magit]]
   - [[#helm][Helm]]
   - [[#counsel][Counsel]]
@@ -78,6 +79,8 @@ Custom variables set by various emacs packages
   - [[#flycheck][Flycheck]]
   - [[#emojify][Emojify]]
   - [[#helpful][Helpful]]
+  - [[#elisp-repl][Elisp repl]]
+  - [[#better-link-opener][Better link opener]]
   - [[#local-variables][Local Variables]]
 
 ** Package manager
@@ -218,7 +221,7 @@ Make escape quit prompts.
   (nimor/leader-keys
     "a"  'org-agenda
     "b"  'counsel-bookmark
-    "f"  'find-file
+    "ff"  'find-file
     "/"  'swiper
     "pf" 'nimor/open-config))
 #+end_src
@@ -323,39 +326,55 @@ Installing and configuring org-mode:
     (org-mode . nimor/org-mode-setup)
     :config
     (require 'org-tempo)
-    (eval-after-load 'org-agenda
-    '(progn
-        (evil-set-initial-state 'org-agenda-mode 'normal)
-        (evil-define-key 'normal org-agenda-mode-map
-          "vd" 'org-agenda-day-view
-          "vw" 'org-agenda-week-view
-          "I"  'org-agenda-clock-in
-          "O"  'org-agenda-clock-out)))
-    (setq org-refile-targets
-        '(("~/Nextcloud/Orgzly/gtd.org" :maxlevel . 3)
-          ("~/Nextcloud/Orgzly/someday.org" :level . 1)
-          ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 2)))
-    (setq org-capture-templates
-        '(("t" "Todo [inbox]" entry
-          (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-          "* TODO %i%?")
-          ("T" "Tickler" entry
-          (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
-          "* TODO %i%? \n SCHEDULED: %T")))
-    (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+
+    ;; make org-agenda respect evil
+    (evil-set-initial-state 'org-agenda-mode 'normal)
+
+    ;; org-agenda custom bindings
+    (evil-define-key 'normal org-agenda-mode-map
+      "vd" 'org-agenda-day-view
+      "vw" 'org-agenda-week-view
+      "I"  'org-agenda-clock-in
+      "O"  'org-agenda-clock-out)
+
+    ;; files that org-agenda will read from 
     (setq org-agenda-files
     '("~/Nextcloud/Orgzly/gtd.org"
       "~/Nextcloud/Orgzly/tickler.org"
       "~/Nextcloud/Orgzly/inbox.org"
       "~/Nextcloud/org/work"))
 
+    ;; org-agenda custom views
+    (setq org-agenda-custom-commands
+      '(("g" "GTD" tags-todo "@gtd"
+        ((org-agenda-overriding-header "GTD")))))
+
+    ;; files to refile to
+    (setq org-refile-targets
+        '(("~/Nextcloud/Orgzly/gtd.org" :maxlevel . 3)
+          ("~/Nextcloud/Orgzly/someday.org" :level . 1)
+          ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 2)))
+
+    ;; quick templates for org files
+    (setq org-capture-templates
+        '(("t" "Todo [inbox]" entry
+          (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+         "* TODO %i%?")
+          ("T" "Tickler" entry
+          (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
+          "* TODO %i%? \n SCHEDULED: %T")))
+
+    (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+
     (setq org-startup-indented t)
     (setq org-startup-folded t)
     (setq org-log-done 'note)
     (setq org-tags-column 0)
     (setq org-agenda-tags-column 0)
-    (setq org-src-preserve-indentation nil)
-    (setq org-edit-src-content-indentation 0))
+    ;; src block indentation / editing / syntax highlighting
+    (setq org-src-fontify-natively t
+          org-src-preserve-indentation t ;; do not put two spaces on the left
+          org-src-tab-acts-natively t))
 #+end_src
 
 Like org bullets, but supercharged?
@@ -387,7 +406,9 @@ The notes (zettelkasten) god
      ("C-c n g" . org-roam-graph-show))
     :map org-mode-map
     (("C-c n i" . org-roam-insert))
-    (("C-c n I" . org-roam-insert-immediate))))
+    (("C-c n I" . org-roam-insert-immediate)))
+  :config
+  (setq org-roam-completion-everywhere t))
 #+end_src
 
 **** Deft for viewing roam files
@@ -436,7 +457,19 @@ For your journaling needs.
 (use-package org-journal
   :straight t
   :config
-  (setq org-journal-dir "~/Documents/journal"))
+  (setq org-journal-dir "~/Documents/journal")
+  (setq org-journal-date-format "%A, %d %B %Y")
+  (nimor/leader-keys
+    "nj" 'org-journal-new-entry))
+#+end_src
+*** Org babel
+#+begin_src elisp
+(use-package ob
+  :config
+  (org-babel-do-load-languages
+    'org-babel-load-languages
+      '((python . t)
+       )))
 #+end_src
 ** Magit
 The git supercharge
@@ -548,10 +581,10 @@ Completion for org-roam
 
 #+begin_src elisp
 ;; FIXME this is deprecated and now inside org-roam
-(use-package company-org-roam
-  :straight (:host github :repo "org-roam/company-org-roam")
-  :config
-  (push 'company-org-roam company-backends))
+;; (use-package company-org-roam
+;;   :straight (:host github :repo "org-roam/company-org-roam")
+;;   :config
+;;   (push 'company-org-roam company-backends))
 #+end_src
 ** Snippets
 #+begin_src elisp
@@ -698,12 +731,13 @@ To have paren pairs in the same colour
   :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
 
-Automatic paren completion, and other nifty things
+Automatic paren completion and visualization, and other nifty things
 #+begin_src elisp
 (use-package smartparens
   :straight t
   :config
-  (smartparens-global-mode))
+  (smartparens-global-mode)
+  (show-smartparens-global-mode))
 #+end_src
 
 ** Flycheck
@@ -743,6 +777,27 @@ Helpful adds a lot of very helpful (get it?) information to Emacs’ describe- c
   ([remap describe-key] . helpful-key))
 #+end_src
 
+** Elisp repl
+#+begin_src elisp
+;; dependency of elpl
+(use-package edit-indirect
+  :straight t)
+
+(use-package elpl
+  :straight t
+  :config
+  (nimor/leader-keys
+    "rl" 'elpl-clean
+    "re" 'elpl-edit))
+#+end_src
+** Better link opener
+#+begin_src elisp
+(use-package link-hint
+  :straight t
+  :config
+  (nimor/leader-keys
+    "fo" 'link-hint-open-link))
+#+end_src
 ** Local Variables
 Adds a hook to tangle the file to ~init.el~ after saving.
 # Local Variables:
