--- a/init.org
+++ b/init.org
@@ -68,6 +68,7 @@
   - [[#elisp-repl][Elisp repl]]
   - [[#better-link-opener][Better link opener]]
   - [[#email][Email]]
+  - [[#persistent-scratch][Persistent scratch]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -270,7 +271,7 @@ Make escape quit prompts.
   (nimor/leader-keys
     "a"  'org-agenda
     "b"  'counsel-bookmark
-    "ff" 'find-file
+    "SPC" 'find-file
     "/"  'swiper
     "pf" 'nimor/open-config
     "oc" 'org-capture
@@ -540,12 +541,16 @@ For your journaling needs.
 (use-package alert
   :straight t
   :config
-  (setq alert-default-style 'notifications))
+  (setq alert-default-style
+    (if (eq system-type 'gnu/linux)
+        'notifications
+        'notifier)))
 
 (use-package org-wild-notifier
   :straight t
   :config
-  (org-wild-notifier-mode 1))
+  (org-wild-notifier-mode 1)
+  (setq org-wild-notifier-alert-time '(10 0)))
 #+end_src
 *** Pomodoro
 #+begin_src elisp
@@ -918,33 +923,43 @@ To read / sync email in emacs. Using this only on home computers.
                    (smtp-debug-info       . t)))
   ))
   (setq mu4e-context-policy 'pick-first)
-  (require 'org-mu4e))
+  (require 'org-mu4e)
 
-;; do not put a trashed flag on messages moved to deleted because then mu4e will delete them forever
-(setf (alist-get 'trash mu4e-marks)
-      (list :char '("d" . "▼")
-            :prompt "dtrash"
-            :dyn-target (lambda (target msg)
+  (setf (alist-get 'trash mu4e-marks)
+        (list :char '("d" . "▼")
+              :prompt "dtrash"
+              :dyn-target (lambda (target msg)
                           (mu4e-get-trash-folder msg))
-            :action (lambda (docid msg target)
+              :action (lambda (docid msg target)
                       ;; Here's the main difference to the regular trash mark,
                       ;; no +T before -N so the message is not marked as
                       ;; IMAP-deleted:
                       (mu4e~proc-move docid (mu4e~mark-check-target target) "-N"))))
 
-(mu4e t)
+  (mu4e t))
+
+;; do not put a trashed flag on messages moved to deleted because then mu4e will delete them forever
 #+end_src
 
 Alerts for emails
 
 #+begin_src elisp
 ;; Configure desktop notifs for incoming emails:
-(use-package mu4e-alert
+(when (eq system-type 'gnu/linux)
+  (use-package mu4e-alert
+    :straight t
+    :after mu4e
+    :hook
+    ((after-init . mu4e-alert-enable-mode-line-display)
+     (after-init . mu4e-alert-enable-notifications))
+    :config
+    (mu4e-alert-set-default-style 'libnotify)))
+#+end_src
+
+** Persistent scratch
+#+begin_src elisp
+(use-package persistent-scratch
   :straight t
-  :after mu4e
-  :hook
-  ((after-init . mu4e-alert-enable-mode-line-display)
-   (after-init . mu4e-alert-enable-notifications))
   :config
-  (mu4e-alert-set-default-style 'libnotify))
+  (persistent-scratch-setup-default))
 #+end_src
