--- a/init.org
+++ b/init.org
@@ -395,7 +395,7 @@ Installing and configuring org-mode:
     '("~/Nextcloud/Orgzly/gtd.org"
       "~/Nextcloud/Orgzly/tickler.org"
       "~/Nextcloud/Orgzly/inbox.org"
-      "~/Nextcloud/org/work"))
+      "~/Nextcloud/org/work/work.org"))
 
     ;; org-agenda custom views
     (setq org-agenda-custom-commands
